money change algorithm

--- a/src/variations.html
+++ b/src/variations.html
@@ -49,7 +49,7 @@
 	// 	return waysOfDoingNcents[amount];
 	// }
 
-	var denominations = [5000, 2000, 1000, 500, 100];
+	var denominations = [5000, 1000, 500, 100];
 	var amount = 500;
 
 	console.log(waysToReturnChange(denominations, denominations.length - 1, amount));
